--- a/raspberry-backend/templates/base.html
+++ b/raspberry-backend/templates/base.html
@@ -28,10 +28,18 @@
 	{% endblock %}
     </head>
     <body class="sb-nav-fixed {{'no-scroll-lock' if logs_active}}">
-      
+		<div class = "lock">
+			<a class="unlock" id="toggle_lock" onclick="toggle_lock()">
+			<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="lock" class="fa-lock" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+			  <path class="path-icon transparent" id = "path-locked-main" d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"></path>
+			  <path class="path-icon transparent" id="path-unlocked-main" d="M400 256H152V152.9c0-39.6 31.7-72.5 71.3-72.9 40-.4 72.7 32.1 72.7 72v16c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24v-16C376 68 307.5-.3 223.5 0 139.5.3 72 69.5 72 153.5V256H48c-26.5 0-48 21.5-48 48v160c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z"></path>
+			</svg>
+			</a>
+			</div>
+
       <nav class="sb-topnav navbar navbar-expand navbar-dark px-0 py-0">
 	<!-- Logo -->
-        <a class="navbar-brand" href="" id="sidebarToggle"><img src="{{ url_for('static', filename='img/cern-hev-logo-dark.png') }}" id="logo"></a>
+        <a class="navbar-brand nav-link-disabled" href="" id="sidebarToggle"><img src="{{ url_for('static', filename='img/cern-hev-logo-dark.png') }}" id="logo"></a>
 		<!--<button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" class="svg-inline--fa fa-bars fa-w-14 fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" class="path-icon" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path></svg></button>-->
 	<!-- Alarm -->
         <ul class="navbar-nav ml-auto mr-0 mr-md-3 my-2 my-md-0 alarm-ok px-2 py-0" id = "alarm_ul">
@@ -42,7 +50,7 @@
         <ul class="navbar-nav mr-0 mr-md-3 my-2 my-md-0">
 	  <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="user" class="svg-inline--fa fa-user fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path class="path-icon" d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"></path></svg>
 	</ul>
-	<label class="patient text-white" id="patient_info_top" name="patient_info_top">John Smith, M, 66, 173cm, 78kg</label>
+	<label class="patient text-white" id="patient_info_top" name="patient_info_top"></label>
 
 	<!-- Battery -->
         <ul class="navbar-nav ml-auto mr-0 mr-md-3 my-2 my-md-0">
@@ -64,15 +72,6 @@
 	
       </nav>
         <div id="layoutSidenav">
-
-		<div class = "lock">
-			<a class="unlock" id="toggle_lock" onclick="toggle_lock()">
-			<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="lock" class="fa-lock" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-			  <path class="path-icon transparent" id = "path-locked-main" d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"></path>
-			  <path class="path-icon transparent" id="path-unlocked-main" d="M400 256H152V152.9c0-39.6 31.7-72.5 71.3-72.9 40-.4 72.7 32.1 72.7 72v16c0 13.3 10.7 24 24 24h32c13.3 0 24-10.7 24-24v-16C376 68 307.5-.3 223.5 0 139.5.3 72 69.5 72 153.5V256H48c-26.5 0-48 21.5-48 48v160c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z"></path>
-			</svg>
-			</a>
-			</div>
           <div id="layoutSidenav_nav" class="py-1">
                 <nav class="sb-sidenav accordion sb-sidenav-dark px-1" id="sidenavAccordion">
                   <div class="sb-sidenav-menu">
@@ -278,7 +277,7 @@
 	      }    
 	  });
 	}
-	var alarmInterval = setInterval('update_alarms()', 1000);
+	//var alarmInterval = setInterval('update_alarms()', 1000);
 	
 
 	function unlock(){
@@ -291,7 +290,10 @@
 	  for (let i = 0 ; i < select_fields.length ; i++) { select_fields[i].disabled = false;}
 	  //enable all our navigation links
 	  var l = document.getElementsByClassName("nav-link-href");
-	  for (i = 0; i < l.length; i++) {l[i].classList.remove("nav-link-disabled");}
+	  for (let i = 0; i < l.length; i++) {l[i].classList.remove("nav-link-disabled");}
+	  //enable our side toggle button
+	  var l2 = document.getElementsByClassName("navbar-brand");
+	  for (let i = 0; i < l2.length; i++) {l2[i].classList.remove("nav-link-disabled");}
 	  
 	  // use correct path icon 
 	  var el = document.getElementById("path-locked-main");
@@ -318,7 +320,11 @@
 		 for (let i = 0 ; i < lock_fields.length ; i++) { lock_fields[i].disabled = true;}
 		  // lock all of our navigation links
 		 var l = document.getElementsByClassName("nav-link-href");
-		 for (i = 0; i < l.length; i++) {l[i].classList.add("nav-link-disabled");}
+		 for (let i = 0; i < l.length; i++) {l[i].classList.add("nav-link-disabled");}
+		 // side toggle button
+		 var l2 = document.getElementsByClassName("navbar-brand");
+		 for (let i = 0; i < l2.length; i++) {l2[i].classList.add("nav-link-disabled");}
+
 		 // show locked icon
 		 var el = document.getElementById("path-locked-main");
 		 el.classList.remove("transparent");
