--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -9,9 +9,9 @@
 
   <div class="container-fluid">
 
-    <div class="tab">
-	      <button class="tablinks" onclick="openTab(this, 'Main')">Main</button>
-		  <button class="tablinks" onclick="openTab(this, 'Advanced')">Advanced</button>
+    <div class="tab lockable" disabled>
+	      <button class="tablinks" onclick="openTab(this, 'Main',false)">Main</button>
+		  <button class="tablinks" onclick="openTab(this, 'Advanced',false)">Advanced</button>
     </div>
   
     <div id="Main" class="tabcontent px-0 py-0">
@@ -319,7 +319,9 @@ Object.defineProperty(gauge_fio_container, 'getValue', {
   });
 
 
-function openTab(el, cityName) {
+function openTab(el, cityName, force) {
+ if (el.disabled && (!force)) return;
+ if (el.parentElement.disabled && (!force)) return;
   // Declare all variables
   var i, tabcontent, tablinks;
 
@@ -343,7 +345,7 @@ function openTab(el, cityName) {
 $(document).ready ( function(){
   var tablinks = document.getElementsByClassName("tablinks");
   if (tablinks.length > 0){
-    openTab(tablinks[0],"Main");
+    openTab(tablinks[0],"Main", true);
   }
 });
 function format_ie(thisElement,ie_cont)
