Minor changes on the main page

--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -42,7 +42,7 @@
 					    <input type="button" class="lockable sb-nav-button" name="pause" value="Freeze" onclick="togglePause()" disabled>
 					</div>
 			    </div>
-	      	</div>
+			  </div>
 	     	<div class = "col-cards-main">
 				 <div class = "row no-gutters">
 					<div class = "main-header">
@@ -50,6 +50,8 @@
 					</div>
 				 </div>
 				<div class = "row no-gutters">
+			<!-- Mode status
+
 				    <div class="card-reading">
 		            	<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 					      <span class="small text-white col-center" href="#">Mode</span>
@@ -70,7 +72,7 @@
 							</div>
 					      </div>
 						</div>
-
+            -->  
 				    <div class="card-reading">
 				    	<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 							<a class="small text-white col-center" href="#">RR</small></a>
