--- a/raspberry-backend/templates/base.html
+++ b/raspberry-backend/templates/base.html
@@ -41,6 +41,30 @@
 	<!-- Logo -->
         <a class="navbar-brand nav-link-disabled" href="" id="sidebarToggle"><img src="{{ url_for('static', filename='img/cern-hev-logo-dark.png') }}" id="logo"></a>
 		<!--<button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" class="svg-inline--fa fa-bars fa-w-14 fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" class="path-icon" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path></svg></button>-->
+	<!-- STATUS  -->
+	<div class="navbar-nav px-3 py-1">
+		<div class="card-reader">
+		  <div class="card-header d-flex align-items-center justify-content-between ">
+		  <span class="small text-white col-center" href="#">Mode</span>
+          </div>
+		</div>
+		<div class="card-body px-1 py-1">
+			<div class = "select-container lockable medium text-white" disabled>
+			  <select class = "input-reading ml-auto mr-auto pickout" name="VentilatorMode" id="vent_mode" pickouttitle="Select Ventilator Mode" width="10%">
+				  <option value = ""></option>
+				  <optgroup label = "Pressure Control Modes">
+					<option value="opt1" selected>PC-A/C</option>
+					<option value="opt2">PC-A/C-PRVC</option>
+				  </optgroup>
+				  <optgroup label = "Pressure Support Modes">
+					<option value="opt3">PC-PSV</option>
+					<option value="opt4">CPAP</option>
+				  </optgroup>
+			  </select>
+			</div>
+		</div>
+	</div>
+
 	<!-- Alarm -->
         <ul class="navbar-nav ml-auto mr-0 mr-md-3 my-2 my-md-0 alarm-ok px-2 py-0" id = "alarm_ul">
 	  <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="exclamation-circle" class="svg-inline--fa fa-exclamation-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path id = "path-alarm" class="path-icon path-alarm" d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"></path></svg> <div id='alarms' class = "w-100"></div>
@@ -51,7 +75,10 @@
 	  <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="user" class="svg-inline--fa fa-user fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path class="path-icon" d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"></path></svg>
 	</ul>
 	<label class="patient text-white" id="patient_info_top" name="patient_info_top"></label>
-
+	<!-- Export  -->
+	<a class="navbar-nav mr-0 mr-md-3 my-2 my-md-0" href="downloadCSV" class = "nav-link-href nav-link-disabled"> <div class = "sb-nav-link-icon d-flex justify-content-center border-invisible {{'active' if downloadCSV_active}}">
+			<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="file-export" class="fa-file-export fa-w-15" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="gray" d="M384 121.9c0-6.3-2.5-12.4-7-16.9L279.1 7c-4.5-4.5-10.6-7-17-7H256v128h128zM571 308l-95.7-96.4c-10.1-10.1-27.4-3-27.4 11.3V288h-64v64h64v65.2c0 14.3 17.3 21.4 27.4 11.3L571 332c6.6-6.6 6.6-17.4 0-24zm-379 28v-32c0-8.8 7.2-16 16-16h176V160H248c-13.2 0-24-10.8-24-24V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V352H208c-8.8 0-16-7.2-16-16z"></path></svg>
+	</a>
 	<!-- Battery -->
         <ul class="navbar-nav ml-auto mr-0 mr-md-3 my-2 my-md-0">
 	  <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="battery-full" class="svg-inline--fa fa-battery-full fa-w-20" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
@@ -93,9 +120,7 @@
 		      <a href="settings" class = "nav-link-href nav-link-disabled"> <div class = "sb-nav-link-icon d-flex justify-content-center border-invisible {{'active' if settings_active}}">
               <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="sliders-h" class="fa-sliders-h fa-w-15" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path class="path-icon" d="M496 384H160v-16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v16H16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h80v16c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16v-16h336c8.8 0 16-7.2 16-16v-32c0-8.8-7.2-16-16-16zm0-160h-80v-16c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v16H16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h336v16c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16v-16h80c8.8 0 16-7.2 16-16v-32c0-8.8-7.2-16-16-16zm0-160H288V48c0-8.8-7.2-16-16-16h-32c-8.8 0-16 7.2-16 16v16H16C7.2 64 0 71.2 0 80v32c0 8.8 7.2 16 16 16h208v16c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16v-16h208c8.8 0 16-7.2 16-16V80c0-8.8-7.2-16-16-16z"></path></svg>
 			  </div></a>
-			  <a href="downloadCSV" class = "nav-link-href nav-link-disabled"> <div class = "sb-nav-link-icon d-flex justify-content-center border-invisible {{'active' if downloadCSV_active}}">
-				<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="file-export" class="fa-file-export fa-w-15" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="gray" d="M384 121.9c0-6.3-2.5-12.4-7-16.9L279.1 7c-4.5-4.5-10.6-7-17-7H256v128h128zM571 308l-95.7-96.4c-10.1-10.1-27.4-3-27.4 11.3V288h-64v64h64v65.2c0 14.3 17.3 21.4 27.4 11.3L571 332c6.6-6.6 6.6-17.4 0-24zm-379 28v-32c0-8.8 7.2-16 16-16h176V160H248c-13.2 0-24-10.8-24-24V0H24C10.7 0 0 10.7 0 24v464c0 13.3 10.7 24 24 24h336c13.3 0 24-10.7 24-24V352H208c-8.8 0-16-7.2-16-16z"></path></svg>
-			  </div></a>
+
   
 			  
 			</div>
@@ -105,7 +130,6 @@
 		    <input type="submit" name="start" value="START" onclick="cmdNotification(this)" class="lockable sb-nav-button py-1 mb-1" disabled></input>
 			<input type="submit" name="stop" value="STOP" onclick="cmdNotification(this)" class="lockable sb-nav-button py-1 mb-1" disabled></input>
 			<input type="submit" name="standby" value="STANDBY" onclick="cmdNotification(this)" class="lockable sb-nav-button py-1 mb-1" disabled></input>
-		    <input type="submit" name="export" value="EXPORT" onclick="cmdNotification(this)" class="lockable sb-nav-button py-1 mb-1" disabled></input>
 			</div>
 			</form>
 
