fixing issues on gitlab

--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -112,7 +112,7 @@
 				<div class = "row no-gutters">
 					<div class="card-setting">
 						<div class="card-header d-flex align-items-center justify-content-between">
-							<a class="small text-dark col-center" href="#">Inhale Time</a>
+							<a class="small text-dark col-center" href="#">Inhale Time <small>[s]</small></a>
 						</div>
 						<div class="card-body px-1 py-1 tiny"><input class = "setting-main lockable" id = "setting_inhale_time" value = 0.0 onclick = "show_easy_numpad(this, new input_controller('INHALE_TIME',this))"></div> 
 					</div>
@@ -124,7 +124,7 @@
 					</div>
 					<div class="card-setting">
 						<div class="card-header d-flex align-items-center justify-content-between">
-							<a class="small text-dark col-center" href="#">PEEP</a>
+							<a class="small text-dark col-center" href="#">PEEP <small>[cmH2O]</small></a>
 						</div>
 						<div class="card-body px-1 py-1 tiny"><input class = "setting-main lockable" id = "setting_peep" value=0.0 onclick="show_easy_numpad(this,new input_controller('PEEP',this))"></div> 
 					</div>
